# promptfuzz

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  action.yml  mkdocs.yml  promptfuzz.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: index.md
promptfuzz/: __init__.py  cli.py  dashboard.py
promptfuzz/attacks/: encoding.py  extraction.py  injection.py  jailbreak.py  multi_turn.py  rag.py
promptfuzz/core/: base.py  config.py  daemon.py  engine.py  models.py  scaffold.py
promptfuzz/detectors/: keyword.py  llm_judge.py  refusal_drop.py  semantic.py
promptfuzz/frontend/: index.html
promptfuzz/frontend/assets/: index-BZcO3FPl.js  index-DJB7YLIL.css
promptfuzz/mutators/: transforms.py
promptfuzz/reporters/: outputs.py
promptfuzz/targets/: providers.py
tests/: fix.py  lint_fix.py  test_cli.py  test_core.py  test_daemon.py  test_engine.py  test_integration.py  test_outputs.py
ui/: index.html  package-lock.json  vite.config.js
ui/src/: App.jsx  index.css
ui/src/components/: Dashboard.jsx  Navbar.jsx  StatCard.jsx
